# xfmixer

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  libtool
xfmixer/: Makefile  Makefile.am  Makefile.in  alsa.c  alsa.h  main.c  xfmixer  xfmixer-window.c  xfmixer-window.h
xfmixer/.deps/: main.Po  xfmixer-main.Po
